# urlet

./: Cargo.toml  LICENSE  README.md  db-run  dev  docker-compose.dev.yml
api/: Dockerfile-prod  README.md  api-prod-run  database.sql
api/src/: db.rs  dotenv.rs  main.rs  routes.rs
app/: package-lock.json
app/public/: index.html
app/src/: App.svelte  global.css
db/: db-dev-run  db-prod-run
src/: main.rs  routes.rs  urlet.rs
web/: Dockerfile-dev  Dockerfile-prod  LICENSE  nginx.conf  web-prod-run
web/app/: package-lock.json  package.json  snowpack.config.js
web/app/public/: index.html
web/app/src/: App.svelte  global.css
web/app/src/services/: api.js
