[package]
name = "urlet-api"
version = "0.1.0"
authors = ["Seppo Kilpeläinen <seppo.kilpelainen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
listenfd = "0.3"
dotenv-parser =  "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"