[package]
name = "urlet-api"
version = "0.1.0"
authors = ["Seppo Kilpeläinen <seppo.kilpelainen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-actix-rustls", "uuid" ] }
uuid = { version = "0.8", features = ["v4", "serde"] }
listenfd = "0.3"
dotenv-parser =  "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
serde = "1"
serde_json = "1"
base64 = "0.13"
thiserror = "1.0"